--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="action_settings">toolbarTitle</string>
     <string name="title_activity_pacientes">PacientesActivity</string>
+    <string name="menu_tititulo_configuracoes">Configurações</string>
+    <string name="menu_titutlo_agenda">Agenda</string>
+    <string name="menu_titulo_pacientes">Pacientes</string>
+    <string name="texto_caixa_pesquisa">Pesquisar paciente</string>
+    <string name="title_activity_paciente">PacienteActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
