--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="menu_titulo_pacientes">Pacientes</string>
     <string name="texto_caixa_pesquisa">Pesquisar paciente</string>
     <string name="title_activity_paciente">PacienteActivity</string>
-    <string name="tab_text_1">Tab 1</string>
+
+    <string name="tab_text_1">Dados</string>
     <string name="tab_text_2">Tab 2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
