--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,10 @@
     <string name="texto_caixa_pesquisa">Pesquisar paciente</string>
     <string name="title_activity_paciente">PacienteActivity</string>
 
-    <string name="tab_text_1">Dados</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tabPaciente_text_1">Dados</string>
+    <string name="tabPaciente_text_2">Anamnese</string>
+    <string name="tabPaciente_text_3">Tratamentos</string>
+    <string name="tabPaciente_text_4">Consultas</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
